--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <ListView
+        android:id="@+id/list_item"
         android:layout_width="409dp"
         android:layout_height="657dp"
         tools:layout_editor_absoluteX="1dp"
